crates/vexor-compiler/tests/golden/error/output/list_range.err
Error: parse error
   ╭─[ input:4:16 ]
   │
 4 │ val zs = [1,2,3..10]
   │                ┬  
   │                ╰── invalid list
   │                │  
   │                ╰── expected `]`, comma-separated list, range `[x..y]`, range `[x,y..z]`
───╯
